# companion

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  CODEBASE_SCAN.md  DEPENDENCIES_SUMMARY.txt  DEPENDENCY_AUDIT.md  DEPENDENCY_DOCTOR_REPORT.md  DEPENDENCY_STATUS.txt  Dockerfile  FEATURE_REGISTRY.md  LICENSE  PROJECT_AUDIT.md  QUICK_REFERENCE.md  README.md  README_DEPENDENCIES.md  RESCUE-REPORT.md  SCAN_INDEX.md  dev.bat  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  eslint.config.mjs  package.json  release.bat  tsconfig.json
.claude/: CLAUDE.md  settings.json  settings.local.json
.rune/: INVARIANTS.md  RUNBOOK.md  analysis-1devtool.md  architecture-brainstorm.md  dependency-audit-results.md  design-system.md  logic-manifest.json  plan-account-usage-phase1.md  plan-account-usage-phase2.md  plan-account-usage-phase3.md  plan-account-usage-phase4.md  plan-account-usage.md  plan-agent-platform-phase5.md  plan-agent-sdk-migration.md  plan-agent-support-engine.md  plan-analytics-v2-phase1.md  plan-analytics-v2-phase2.md  plan-analytics-v2-phase3.md  plan-analytics-v2-phase4.md  plan-analytics-v2.md  plan-audit-fixes-phase12.md  plan-audit-fixes-phase13.md  plan-audit-fixes.md  plan-cc-integration-phase1.md  plan-cc-integration-phase2.md  plan-cc-integration-phase3.md  plan-cc-integration.md  (+243 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs  server.rs  tray.rs
(+41 files in other folders)
